Updated to be released with Java 8 version (#169)